added reading from http response and saving button info to a class object

--- a/app/src/main/res/layout/activity_button_page.xml
+++ b/app/src/main/res/layout/activity_button_page.xml
@@ -9,7 +9,7 @@
     android:paddingTop="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
-    tools:context=".ui.ButtonList">
+    tools:context=".ui.ButtonPage">
 
     <TextView
         android:layout_width="fill_parent"
@@ -31,6 +31,12 @@
     </ListView>
 
 
+    <TextView
+        android:id="@+id/jsonText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="jsontext" />
+
     <Button
         android:id="@+id/scanButton"
         android:layout_width="fill_parent"
@@ -39,5 +45,12 @@
         android:gravity="center"
         android:onClick="onScan"
         android:text="" />
+
+    <Button
+        android:id="@+id/jsonButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="download json"
+        android:onClick="onGetJson" />
 
 </LinearLayout>
