--- a/app/src/main/res/layout/activity_peripheral_control.xml
+++ b/app/src/main/res/layout/activity_peripheral_control.xml
@@ -87,5 +87,17 @@
         android:text="TTS"
         android:onClick="onTTS" />
 
+    <Button
+        android:id="@+id/buttonList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/startBeepingButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="161dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginBottom="32dp"
+        android:text="Button" />
+
 
 </RelativeLayout>
