--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -19,6 +19,17 @@
         <item>US male 1</item>
         <item>US male 2</item>
     </string-array>
+    <string-array name="region_defaults" />
+    <string-array name="region_entries">
+        <item>zabrze</item>
+        <item>gliwice</item>
+        <item>tg</item>
+    </string-array>
+    <string-array name="region_values">
+        <item>reg1</item>
+        <item>reg2</item>
+        <item>reg3</item>
+    </string-array>
     <string-array name="voice_values">
         <item>gbf1</item>
         <item>gbf2</item>
