--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -24,5 +25,6 @@
         android:text=""
         android:textColor="#757575"
         android:textSize="20sp"
-        android:gravity="right" />
+        android:gravity="end"
+        tools:ignore="RtlHardcoded,RtlSymmetry" />
 </LinearLayout>
