--- a/app/src/main/res/layout/activity_button_page.xml
+++ b/app/src/main/res/layout/activity_button_page.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,12 +13,13 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="left"
-        android:paddingLeft="10dip"
+        android:gravity="start"
+        android:paddingStart="10dip"
+        android:paddingEnd="10dip"
         android:paddingBottom="10dp"
         android:text="Pedestrian Buttons List"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <ListView
         android:id="@+id/deviceList"
