--- a/app/src/main/res/layout/activity_button_page.xml
+++ b/app/src/main/res/layout/activity_button_page.xml
@@ -4,29 +4,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="10dp"
-    tools:context=".ui.ButtonPage">
+    tools:context=".ui.ButtonPage"
+    android:background="#34000000">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="start"
-        android:paddingStart="10dip"
-        android:paddingEnd="10dip"
-        android:paddingBottom="10dp"
-        android:text="Pedestrian Buttons List"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:text="NAME"
+            android:textColor="#000000"
+            android:textSize="30sp"
+            android:paddingLeft="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="DISTANCE"
+            android:textColor="#000000"
+            android:textSize="30sp"
+            android:paddingRight="10dp" />
+
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/deviceList"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:paddingLeft="20dip">
+        android:divider="@null"
+        android:dividerHeight="0dp">
 
     </ListView>
 
@@ -34,10 +46,12 @@
     <Button
         android:id="@+id/scanButton"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="110dp"
         android:enabled="true"
         android:gravity="center"
         android:onClick="onScan"
-        android:text="" />
+        android:text=""
+        android:textSize="40sp"
+        android:background="#9200A6FF" />
 
 </LinearLayout>
