--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -9,22 +9,23 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="5dp"
-
-        android:textSize="36sp"
+        android:paddingLeft="10dp"
+        android:textSize="30sp"
         android:textColor="#000000"
         android:text=""
         android:gravity="top" />
 
     <TextView
-        android:id="@+id/bdaddr"
+        android:id="@+id/distanceText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text=""
-        android:textColor="#757575"
-        android:textSize="20sp"
+        android:textColor="#444444"
+        android:textSize="65sp"
         android:gravity="end"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         tools:ignore="RtlHardcoded,RtlSymmetry" />
 </LinearLayout>
