--- a/app/src/main/res/layout/activity_peripheral_control.xml
+++ b/app/src/main/res/layout/activity_peripheral_control.xml
@@ -16,30 +16,39 @@
         android:textColor="#000000"
         android:textSize="25sp" />
 
-    <TextView
-        android:id="@+id/distanceTextStatic"
+    <LinearLayout
+        android:id="@+id/textLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/nameTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:text="DISTANCE"
-        android:textSize="30sp"
-        android:textColor="#000000" />
-    <TextView
-        android:id="@+id/distanceTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/distanceTextStatic"
-        android:layout_centerHorizontal="true"
-        android:text="0.00m"
-        android:textSize="50sp"
-        android:textColor="#000000" />
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/distanceTextStatic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginEnd="5dp"
+            android:text="DISTANCE:"
+            android:textColor="#000000"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/distanceTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="0.00m"
+            android:textColor="#000000"
+            android:textSize="40sp" />
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/rectangle"
         android:layout_width="fill_parent"
-        android:layout_height="130dp"
+        android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp"
         android:background="#F44336"
@@ -59,10 +68,10 @@
     <Button
         android:id="@+id/startBeepingButton"
         android:layout_width="fill_parent"
-        android:layout_height="120dp"
-        android:layout_below="@+id/distanceTextView"
+        android:layout_height="100dp"
+        android:layout_below="@+id/textLayout"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="19dp"
         android:background="#9200A6FF"
         android:enabled="false"
         android:text="beep"
@@ -71,45 +80,46 @@
     <Button
         android:id="@+id/ttsButton"
         android:layout_width="fill_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_below="@+id/startBeepingButton"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="9dp"
         android:onClick="onTTS"
-        android:text="READ LOCATION"
+        android:text="LOCATION"
         android:background="#AED581"
         android:textSize="50sp" />
 
     <EditText
-        android:importantForAutofill="no"
         android:id="@+id/passwordSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ttsButton"
-        android:layout_marginTop="30dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:hint="admin PIN"
+        android:layout_marginBottom="20dp"
         android:ems="10"
+        android:hint="admin PIN"
+        android:importantForAutofill="no"
         android:inputType="numberPassword"
         android:maxLength="4" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/passwordSettings"
+        android:layout_width="match_parent"
+        android:layout_height="63dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_marginBottom="20dp"
+        android:id="@+id/buttonsLayout"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/lowButton"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:enabled="false"
-            android:text="LOW"
             android:layout_weight="1"
+            android:enabled="false"
             android:onClick="onLow"
+            android:text="LOW"
             android:visibility="invisible" />
 
         <Button
@@ -118,8 +128,8 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:enabled="false"
-            android:text="MID"
             android:onClick="onMid"
+            android:text="MID"
             android:visibility="invisible" />
 
         <Button
@@ -128,8 +138,8 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:enabled="false"
-            android:text="HIGH"
             android:onClick="onHigh"
+            android:text="HIGH"
             android:visibility="invisible" />
     </LinearLayout>
 
